--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,20 @@
 // Navigation code here
+nav{
+    background-color:#f6f6f6;
+    border-bottom:2px solid #f1f1f1;
+    h1{
+        margin:10px;
+    }
+    width:100%;
+    .vert();
+    .links{
+        margin:10px;
+        width:80%;
+        .horz();
+        a{
+            color:black;
+            font-size:15px;
+            text-decoration: none;
+        }
+    }
+}
