--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,15 @@
 // Home Content
 
 .home {
-
+.banner{
+  .horz();
+  img{
+    border-radius:5px;
+    @media @mobile{
+      max-width:100%;
+    }
+  }
+}
   .intro {
 
     h2 {
@@ -18,13 +26,24 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    .blast{
+      @media @mobile{
+        width:90%;
+        margin:0 auto;
+      }
+    }
+    .sky, .launch{
+      @media @mobile{
+        display:none;
+      }
+    }
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-    }
+      }
   }
 
   .visit-planets {
@@ -40,6 +59,9 @@
   }
 
   .walk {
+    @media @mobile{
+      .vert();
+    }
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
@@ -47,6 +69,10 @@
     justify-content: center;
 
     .walk-text {
+      @media @mobile{
+        width:100%;
+        order:1;
+      }
       width: 50%;
 
       h3 {
@@ -58,10 +84,27 @@
       }
 
       .btn {
+        .butt(white, #22283a);
+        font-size:20px;
+        padding:10px;
+        width:100px;
+        text-align: center;
+        border-radius: 5px;
+        @media @mobile{
+          width:90%;
+          margin:0 auto;
+        }
+      }
+      .btn:hover{
+        .butt(#22283a, white);
+        border:1px solid #22283a;
       }
     }
 
     .walk-img {
+      @media @mobile{
+        width:80vw;
+      }
       width: 46%;
       margin-left: 4%;
       
